# python-project-83

./: Makefile  Procfile  README.md  database.sql  pyproject.toml  requirements
.github/workflows/: flake8.yaml
page_analyzer/: app.py  db.py  db_works.py
page_analyzer/Templates/: index.html
page_analyzer/templates/: base.html  index.html  url.html  urls.html
